--- a/AcceleratorMagnets(InheritanceExample)/ReadMe
+++ b/AcceleratorMagnets(InheritanceExample)/ReadMe
@@ -1,1 +1,2 @@
-![accelmagsnaps](https://cloud.githubusercontent.com/assets/24522089/21863787/47954556-d858-11e6-99ed-b7817fa8f139.PNG)
+
+![GitHub Logo](https://cloud.githubusercontent.com/assets/24522089/21879322/650d40bc-d8b1-11e6-95ae-8fddb5d9df3e.PNG)
