--- a/AcceleratorMagnets(InheritanceExample)/ReadMe
+++ b/AcceleratorMagnets(InheritanceExample)/ReadMe
@@ -1,2 +1,1 @@
-
-![GitHub Logo](https://cloud.githubusercontent.com/assets/24522089/21879322/650d40bc-d8b1-11e6-95ae-8fddb5d9df3e.PNG)
+![acceler magnets](https://cloud.githubusercontent.com/assets/24522089/21879322/650d40bc-d8b1-11e6-95ae-8fddb5d9df3e.PNG)
